--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,28 @@ a {
   background-image: url(/images/bgc-image.jpg);
   background-position: center;
 }
+.social-links {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+}
+
+.social-links .link {
+  display: flex;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.social-links > li {
+  margin-right: 10px;
+}
+.social-links > li:last-child {
+  margin-right: 0px;
+}
 
 /* Section */
 .bgc {
