--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,10 @@ a {
   padding-bottom: 60px;
   margin-top: 0px;
 }
+.footer-distance{
+  display: flex;
+}
+
 .adress-link {
   color: rgba(255, 255, 255, 0.6);
 }
