--- a/css/styles.css
+++ b/css/styles.css
@@ -492,12 +492,15 @@ a {
 }
 .footer-distance{
   display: flex;
+  align-items: baseline;
 }
 
 .adress-link {
   color: rgba(255, 255, 255, 0.6);
 }
 .join{
+  margin-top: 0px;
+  margin-bottom: 20px;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -505,6 +508,9 @@ a {
   text-transform: uppercase;
   
   color: #FFFFFF;
+}
+.footer-links{
+  margin-left: 70px;
 }
 
 .margin {
