--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,14 @@ a {
   margin-bottom: 30px;
   width: 370px;
 }
+.flex-element:hover,
+.flex-element:focus{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+  0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+
 .item-two + .item-two {
   margin-left: 8px;
 }
@@ -356,6 +364,29 @@ a {
   padding-left: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
+  position: relative;
+}
+.position{
+  background: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+  right: 0;
+  left: 0;
+  position: absolute;
+}
+.position-title{
+  margin: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
 }
 .item.images + .item.images {
   margin-left: 30px;
